scrooge-generator: Use wrapper class valueOf in apachejavagen's getFieldValue
Problem

Java classes generated by apachejavagen using new Integer(), new Boolean(), etc
when returning values for getFieldValue. This will create new objects instead of
using the JVM's cached representation which may exist.

Solution

Use WrapperClass.valueOf instead of new WrapperClass

Result

After this change, cached instances of Integers, Booleans, etc can be used
instead of new objects when calling getFieldValue

JIRA Issues: CSL-7251

Differential Revision: https://phabricator.twitter.biz/D374413